--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "Jacob Lowe",
   "license": "ISC",
   "dependencies": {
-    "through2": "~0.6.1",
-    "minimist": "~1.1.0"
+    "minimist": "~1.1.0",
+    "mongodb": "~1.4.8"
   }
 }
